--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Orbitron:700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<div class="bg">
+	<div id="bg">
 		<div class="main-wrapper">
 			<header class="cf">
 				<ul>
@@ -28,7 +28,7 @@
 			<div class="content-wrapper cf">
 				<aside>
 					<nav class="cf">
-						<ul>
+						<ul id="nav-list">
 							<li><a href="#" class="active">Home</a></li>
 							<li><a href="#">Shop</a></li>
 							<li><a href="#">Blog</a></li>
@@ -38,25 +38,25 @@
 
 					<div class="user-data">
 						<p class="payment ">Card</p>
-						<p> Items(<span class="count">0</span>)</p>
+						<p>Items(<span class="count">0</span>)</p>
 					</div>
 				</aside>
 				<div class="product">
-					<figure>
-						<img src="images/img_blue_1.png" height="329" width="240" alt="">
+					<figure id="img1">
+						<img src="images/img_red_1.png" height="330" width="auto" alt="">
 						<figcaption>
 							<div class="price">$199</div>
 							<p><a href="#">add to card</a></p>
 						</figcaption>
 					</figure>
 					<div class="beetw-fig"><p>Featuring the</p></div>
-					<figure class="second-img">
-						<img src="images/img_blue_2.png" height="345" width="162" alt="">	
+					<figure id="img2">
+						<img src="images/img_red_2.png" height="330" width="auto" alt="">	
 					</figure>
 					<div class="colors-change">
-						<ul>
-							<li class="active-type2"><a href="">Orange</a></li>
-							<li><a href="">Dark blue</a></li>
+						<ul id="color-list">
+							<li id="orange" class="active-type-2">Orange</li>
+							<li id="dark-blue">Dark blue</li>
 						</ul>
 					</div>
 					<div class="product-caption">Advanced bas level control</div>
@@ -64,17 +64,20 @@
 			</div>
 			<footer class="cf">
 				<div class="copyright">
-					<p>&copy; Pioneer 2015</p>
+					<p>&copy; Pioneer. 2015.</p>
 					<p>All rights reserved</p>
 				</div>
 				<div class="languige">
-					<ul>
-						<li><a href="#" class="active">En</a></li>
+					<ul id="languige-list">
+						<li><a href="#" class="active-type-3">En</a></li>
 						<li><a href="#">Ru</a></li>
 					</ul>
 				</div> 
 			</footer>
 		</div>
 	</div>
+
+	<script src="js/jquery.min.js"></script>
+	<script src="js/mian.js"></script>
 </body>
 </html>
