HelvLight font added

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					</nav>
 
 					<div class="user-data">
-						<p class="payment ">Card</p>
+						<h3 class="payment ">Card</h3>
 						<p>Items(<span class="count">0</span>)</p>
 					</div>
 				</aside>
