--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</aside>
 				<div class="product">
 					<figure id="img1">
-						<img src="images/img_red_1.png" height="330" width="auto" alt="">
+						<img src="images/img_red_1.png" alt="">
 						<figcaption>
 							<div class="price">$199</div>
 							<p><a href="#">add to card</a></p>
@@ -51,23 +51,23 @@
 					</figure>
 					<div class="beetw-fig"><p>Featuring the</p></div>
 					<figure id="img2">
-						<img src="images/img_red_2.png" height="330" width="auto" alt="">	
+						<img src="images/img_red_2.png" alt="">	
 					</figure>
+					<div class="product-caption">Advanced bas level control</div>
+				</div>
 					<div class="colors-change">
 						<ul id="color-list">
 							<li id="orange" class="active-type-2">Orange</li>
 							<li id="dark-blue">Dark blue</li>
 						</ul>
 					</div>
-					<div class="product-caption">Advanced bas level control</div>
-				</div>
 			</div>
 			<footer class="cf">
 				<div class="copyright">
 					<p>&copy; Pioneer. 2015.</p>
 					<p>All rights reserved</p>
 				</div>
-				<div class="languige">
+				<div class="languige cf">
 					<ul id="languige-list">
 						<li><a href="#" class="active-type-3">En</a></li>
 						<li><a href="#">Ru</a></li>
