--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div id="bg">
-		<div class="main-wrapper">
+		<div class="main-wrapper cf">
 			<header class="cf">
 				<ul>
 					<li class="logo">Pioneer</li>
