--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@
 				</div> 
 			</footer>
 		</div>
+		<div id="preload" class="preload-wrapper">
+			<div class="preloader">
+				<span>Loading...</span>
+			
+					<div class="note-1"></div>
+					<div class="note-2"></div>
+					<div class="note-3"></div>
+					<div class="note-4"></div>
+				
+			</div>
+		</div>
 	</div>
 
 	<script src="js/jquery.min.js"></script>
